--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   "devDependencies": {
     "@hazae41/deimos": "^1.0.6",
     "@hazae41/phobos": "^1.0.10",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@types/node": "^18.11.18",
-    "rimraf": "^4.1.0",
-    "rollup": "^3.10.0",
-    "rollup-plugin-dts": "^5.1.1",
-    "rollup-plugin-node-externals": "^5.1.0",
-    "tslib": "^2.5.0",
-    "typescript": "^4.9.4"
+    "@hazae41/rimraf": "^1.0.1",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@types/node": "^20.8.2",
+    "rollup": "^4.0.0",
+    "rollup-plugin-dts": "^6.0.2",
+    "rollup-plugin-node-externals": "^6.1.2",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2"
   },
   "exports": {
     ".": {
