--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "main": "./dist/cjs/index.cjs",
   "module": "./dist/esm/index.mjs",
-  "types": "./dist/types/index.d.ts",
+  "types": "./dist/esm/index.d.ts",
   "sideEffects": false,
   "files": [
     "./dist/esm",
@@ -29,14 +29,13 @@
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/node": "^20.8.2",
     "rollup": "^4.0.0",
-    "rollup-plugin-dts": "^6.0.2",
     "rollup-plugin-node-externals": "^6.1.2",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   },
   "exports": {
     ".": {
-      "types": "./dist/types/index.d.ts",
+      "types": "./dist/esm/index.d.ts",
       "import": "./dist/esm/index.mjs",
       "require": "./dist/cjs/index.cjs"
     }
